--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<p>Last updated September 27<sup>th</sup>, 2019.</p>
 		<!--#include virtual="/lib/licence.html" -->
 	</div>
-	<div id="frontmatter" class="frontmatter">
+	<div id="Innocence" class="description">
 		<p><em>Songs of Innocence</em> was the first of Blake's illuminated books published in 1789. The poems and artwork were
 			reproduced by copperplate engraving and colored with washes by hand. In 1794 he expanded the book to include <em>Songs
 				of Experience</em>. The spellings, punctuation and capitalizations are those of the original Blake manuscripts.</p>
@@ -36,20 +36,20 @@
 	<div class="row">
 		<div class="column illustration">
 			<p><a href="Images/1.jpg"><img src="Images/1.jpg" alt="" /><br />
-					Title Page</a>
+					Plate 1</a>
 			</p>
 		</div>
 
 		<div class="column illustration">
 			<p><a href="Images/2.jpg"><img src="Images/2.jpg" alt="" /><br />
-					Frontispiece</a>
+					Plate 2</a>
 			</p>
 		</div>
 	</div>
 	<div class="row">
 		<div class="column illustration">
 			<p><a href="Images/3.jpg"><img src="Images/3.jpg" alt="" /><br />
-					Introduction</a>
+					Plate 3</a>
 			</p>
 		</div>
 	</div>
@@ -238,7 +238,7 @@
 		<div class="column">
 			<p>"For when our souls have learn'd the heat to bear,<br />
 				The cloud will vanish: we shall hear his voice,<br />
-				Saying: 'Come out from lhe grove, my love &amp; care.<br />
+				Saying: 'Come out from the grove, my love &amp; care.<br />
 				And round my golden tent like lambs rejoice.'</p>
 
 			<p>Thus did my mother say, and kissed me;<br />
@@ -781,14 +781,19 @@
 				He doth sit by us and moan.</p>
 		</div>
 	</div>
+	<div id="Experience" class="description">
+		<p><em>Songs of Experience</em> is the second part of <em>Songs of Innocence and of Experience: Shewing the Two
+				Contrary States of the Human Soul</em> (first published in 1794), an expansion of Blake's first illuminated book
+			<em>Songs of Innocence</em>. The poems and artwork were reproduced by copperplate engraving and colored with washes by
+			hand. Blake republished <em>Songs of Innocence and Experience</em> several times, often changing the number and order
+			of the plates. The spellings, punctuation and capitalizations are those of the original Blake manuscripts.</p>
+	</div>
 	<div class="row">
 		<div class="column illustration">
 			<p><a href="Images/28.jpg"><img src="Images/28.jpg" alt="" /><br />
 					Plate 28</a>
 			</p>
 		</div>
-	</div>
-	<div class="row">
 		<div class="column illustration">
 			<p><a href="Images/29.jpg"><img src="Images/29.jpg" alt="" /><br />
 					Plate 29</a>
@@ -801,11 +806,224 @@
 					Plate 30</a>
 			</p>
 		</div>
+
+		<div class="column">
+			<h3>Introduction</h3>
+
+			<div class="stanza">
+				<p>Hear the voice of the Bard!</p>
+
+				<p>Who Present, Past, &amp; Future sees</p>
+
+				<p>Whose ears have heard,</p>
+
+				<p>The Holy Word,</p>
+
+				<p>That walk'd among the ancient trees.</p>
+			</div>
+
+			<div class="stanza">
+				<p>Calling the lapsed Soul</p>
+
+				<p>And weeping in the evening dew:</p>
+
+				<p>That might controll,</p>
+
+				<p>The starry pole;</p>
+
+				<p>And fallen fallen light renew!</p>
+			</div>
+
+			<div class="stanza">
+				<p>O Earth O Earth return!</p>
+
+				<p>Arise from out the dewy grass;</p>
+
+				<p>Night is worn,</p>
+
+				<p>And the morn</p>
+
+				<p>Rises from the slumberous mass.</p>
+			</div>
+
+			<div class="stanza">
+				<p>Turn away no more:</p>
+
+				<p>Why wilt thou turn away</p>
+
+				<p>The starry floor</p>
+
+				<p>The watry shore</p>
+
+				<p>Is giv'n thee till the break of day</p>
+			</div>
+		</div>
 	</div>
 	<div class="row">
 		<div class="column illustration">
 			<p><a href="Images/31.jpg"><img src="Images/31.jpg" alt="" /><br />
 					Plate 31</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/32.jpg"><img src="Images/32.jpg" alt="" /><br />
+					Plate 32</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/33.jpg"><img src="Images/33.jpg" alt="" /><br />
+					Plate 33</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/34.jpg"><img src="Images/34.jpg" alt="" /><br />
+					Plate 34</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/35.jpg"><img src="Images/35.jpg" alt="" /><br />
+					Plate 35</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/36.jpg"><img src="Images/36.jpg" alt="" /><br />
+					Plate 36</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/37.jpg"><img src="Images/37.jpg" alt="" /><br />
+					Plate 37</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/38.jpg"><img src="Images/38.jpg" alt="" /><br />
+					Plate 38</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/39.jpg"><img src="Images/39.jpg" alt="" /><br />
+					Plate 39/a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/40.jpg"><img src="Images/40.jpg" alt="" /><br />
+					Plate 40</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/41.jpg"><img src="Images/41.jpg" alt="" /><br />
+					Plate 41</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/42.jpg"><img src="Images/42.jpg" alt="" /><br />
+					Plate 42</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/43.jpg"><img src="Images/43.jpg" alt="" /><br />
+					Plate 43</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/44.jpg"><img src="Images/44.jpg" alt="" /><br />
+					Plate 44</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/45.jpg"><img src="Images/45.jpg" alt="" /><br />
+					Plate 45</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/46.jpg"><img src="Images/46.jpg" alt="" /><br />
+					Plate 46</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/47.jpg"><img src="Images/47.jpg" alt="" /><br />
+					Plate 47</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/48.jpg"><img src="Images/48.jpg" alt="" /><br />
+					Plate 48</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/49.jpg"><img src="Images/49.jpg" alt="" /><br />
+					Plate 48</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/50.jpg"><img src="Images/50.jpg" alt="" /><br />
+					Plate 50</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/51.jpg"><img src="Images/51.jpg" alt="" /><br />
+					Plate 51</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/52.jpg"><img src="Images/52.jpg" alt="" /><br />
+					Plate 52</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/53.jpg"><img src="Images/53.jpg" alt="" /><br />
+					Plate 53</a>
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="column illustration">
+			<p><a href="Images/54.jpg"><img src="Images/54.jpg" alt="" /><br />
+					Plate 54</a>
 			</p>
 		</div>
 	</div>
