--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<div id="titlepage" class="titlepage">
+	<div id="titlebox" class="titlebox">
 		<h1><span class="title fs150">Songs of Innocence and of Experience</span>
 		</h1>
 		<hr />
@@ -17,61 +17,63 @@
 	</div>
 	<div class="titleverso">
 		<p>This web edition was originally published by <a href="http://ebooks.adelaide.edu.au/">eBooks@Adelaide</a>, and modified and compiled by Raymo111 with better images.</p>
-		<p>Last updated September 28<sup>th</sup>, 2019.</p>
+		<p>Last updated September 30<sup>th</sup>, 2019.</p>
 	</div>
 	<hr />
-	<div class="contents">
-		<h3 class="row">Table of Contents</h3>
-		<div class="column">
-			<h4><a href="#Innocence">Innocence</a></h4>
-			<h5><a href="#Introduction">Introduction</a></h5>
-			<h5><a href="#The Shepherd">The Shepherd</a></h5>
-			<h5><a href="#Ecchoing Green">Ecchoing Green</a></h5>
-			<h5><a href="#The Lamb">The Lamb</a></h5>
-			<h5><a href="#The Little Black Boy">The Little Black Boy</a></h5>
-			<h5><a href="#The Blossom">The Blossom</a></h5>
-			<h5><a href="#The Chimney Sweeper">The Chimney Sweeper</a></h5>
-			<h5><a href="#The Little Boy Lost">The Little Boy Lost</a></h5>
-			<h5><a href="#The Little Boy Found">The Little Boy Found</a></h5>
-			<h5><a href="#Laughing Song">Laughing Song</a></h5>
-			<h5><a href="#A Cradle Song">A Cradle Song</a></h5>
-			<h5><a href="#The Divine Image">The Divine Image</a></h5>
-			<h5><a href="#Holy Thursday">Holy Thursday</a></h5>
-			<h5><a href="#Night">Night</a></h5>
-			<h5><a href="#Spring">Spring</a></h5>
-			<h5><a href="#Nurse's Song">Nurse's Song</a></h5>
-			<h5><a href="#Infant Joy">Infant Joy</a></h5>
-			<h5><a href="#A Dream">A Dream</a></h5>
-			<h5><a href="#On Another's Sorrow:">On Another's Sorrow:</a></h5>
-		</div>
-		<div class="column">
-			<h4><a href="#Experience">Experience</a></h4>
-			<h5><a href="#Introduction 2">Introduction</a></h5>
-			<h5><a href="#Earth's Answer">Earth's Answer</a></h5>
-			<h5><a href="#The Clod & the Pebble">The Clod & the Pebble</a></h5>
-			<h5><a href="#Holy Thursday 2">Holy Thursday</a></h5>
-			<h5><a href="#The Little Girl Lost">The Little Girl Lost</a></h5>
-			<h5><a href="#The Little Girl Found">The Little Girl Found</a></h5>
-			<h5><a href="#The Chimney Sweeper">The Chimney Sweeper</a></h5>
-			<h5><a href="#Nurses Song">Nurses Song</a></h5>
-			<h5><a href="#The Sick Rose">The Sick Rose</a></h5>
-			<h5><a href="#The Fly">The Fly</a></h5>
-			<h5><a href="#The Angel">The Angel</a></h5>
-			<h5><a href="#The Tyger">The Tyger</a></h5>
-			<h5><a href="#My Pretty Rose Tree">My Pretty Rose Tree</a></h5>
-			<h5><a href="#Ah! Sun-flower">Ah! Sun-flower</a></h5>
-			<h5><a href="#The Lilly">The Lilly</a></h5>
-			<h5><a href="#The Garden of Love">The Garden of Love</a></h5>
-			<h5><a href="#The Little Vagabond">The Little Vagabond</a></h5>
-			<h5><a href="#London">London</a></h5>
-			<h5><a href="#The Human Abstract"></a></h5>
-			<h5><a href="#Infant Sorrow">Infant Sorrow</a></h5>
-			<h5><a href="#A Poison Tree">A Poison Tree</a></h5>
-			<h5><a href="#A Little Boy Lost 2">A Little Boy Lost</a></h5>
-			<h5><a href="#A Little Girl Lost 2">A Little Girl Lost 2</a></h5>
-			<h5><a href="#To Tirzah">To Tirzah</a></h5>
-			<h5><a href="#The School Boy">The School Boy</a></h5>
-			<h5><a href="#The Voice of the Ancient Bard">The Voice of the Ancient Bard</a></h5>
+	<div id="toc" class="contents">
+		<h3 style="text-align: center">Table of Contents</h3>
+		<div id="tocrow" class="row">
+			<div class="column" style="left: 5vw;">
+				<h4><a href="#Innocence">Innocence</a></h4>
+				<h5><a href="#Introduction">Introduction</a></h5>
+				<h5><a href="#The Shepherd">The Shepherd</a></h5>
+				<h5><a href="#Ecchoing Green">Ecchoing Green</a></h5>
+				<h5><a href="#The Lamb">The Lamb</a></h5>
+				<h5><a href="#The Little Black Boy">The Little Black Boy</a></h5>
+				<h5><a href="#The Blossom">The Blossom</a></h5>
+				<h5><a href="#The Chimney Sweeper">The Chimney Sweeper</a></h5>
+				<h5><a href="#The Little Boy Lost">The Little Boy Lost</a></h5>
+				<h5><a href="#The Little Boy Found">The Little Boy Found</a></h5>
+				<h5><a href="#Laughing Song">Laughing Song</a></h5>
+				<h5><a href="#A Cradle Song">A Cradle Song</a></h5>
+				<h5><a href="#The Divine Image">The Divine Image</a></h5>
+				<h5><a href="#Holy Thursday">Holy Thursday</a></h5>
+				<h5><a href="#Night">Night</a></h5>
+				<h5><a href="#Spring">Spring</a></h5>
+				<h5><a href="#Nurse's Song">Nurse's Song</a></h5>
+				<h5><a href="#Infant Joy">Infant Joy</a></h5>
+				<h5><a href="#A Dream">A Dream</a></h5>
+				<h5><a href="#On Another's Sorrow:">On Another's Sorrow:</a></h5>
+			</div>
+			<div class="column" style="left: 15vw;">
+				<h4><a href="#Experience">Experience</a></h4>
+				<h5><a href="#Introduction 2">Introduction</a></h5>
+				<h5><a href="#Earth's Answer">Earth's Answer</a></h5>
+				<h5><a href="#The Clod & the Pebble">The Clod & the Pebble</a></h5>
+				<h5><a href="#Holy Thursday 2">Holy Thursday</a></h5>
+				<h5><a href="#The Little Girl Lost">The Little Girl Lost</a></h5>
+				<h5><a href="#The Little Girl Found">The Little Girl Found</a></h5>
+				<h5><a href="#The Chimney Sweeper">The Chimney Sweeper</a></h5>
+				<h5><a href="#Nurses Song">Nurses Song</a></h5>
+				<h5><a href="#The Sick Rose">The Sick Rose</a></h5>
+				<h5><a href="#The Fly">The Fly</a></h5>
+				<h5><a href="#The Angel">The Angel</a></h5>
+				<h5><a href="#The Tyger">The Tyger</a></h5>
+				<h5><a href="#My Pretty Rose Tree">My Pretty Rose Tree</a></h5>
+				<h5><a href="#Ah! Sun-flower">Ah! Sun-flower</a></h5>
+				<h5><a href="#The Lilly">The Lilly</a></h5>
+				<h5><a href="#The Garden of Love">The Garden of Love</a></h5>
+				<h5><a href="#The Little Vagabond">The Little Vagabond</a></h5>
+				<h5><a href="#London">London</a></h5>
+				<h5><a href="#The Human Abstract"></a></h5>
+				<h5><a href="#Infant Sorrow">Infant Sorrow</a></h5>
+				<h5><a href="#A Poison Tree">A Poison Tree</a></h5>
+				<h5><a href="#A Little Boy Lost 2">A Little Boy Lost</a></h5>
+				<h5><a href="#A Little Girl Lost 2">A Little Girl Lost 2</a></h5>
+				<h5><a href="#To Tirzah">To Tirzah</a></h5>
+				<h5><a href="#The School Boy">The School Boy</a></h5>
+				<h5><a href="#The Voice of the Ancient Bard">The Voice of the Ancient Bard</a></h5>
+			</div>
 		</div>
 	</div>
 	<hr />
@@ -1490,7 +1492,7 @@
 				<h3>A Poison Tree</h3>
 				<div class="stanza">
 					<p>I was angry with my friend;</p>
-					<p>I told my wrath, my wrath did end</p>
+					<p>I told my wrath, my wrath did end.</p>
 					<p>I was angry with my foe:</p>
 					<p>I told it not, my wrath did grow.</p>
 				</div>
