FIx formatting and some typos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div id="toc" class="contents">
 		<h3 style="text-align: center">Table of Contents</h3>
 		<div id="tocrow" class="row">
-			<div class="column" style="left: 5vw;">
+			<div class="column" style="left: -5vw;">
 				<h4><a href="#Innocence">Innocence</a></h4>
 				<h5><a href="#Introduction">Introduction</a></h5>
 				<h5><a href="#The Shepherd">The Shepherd</a></h5>
@@ -45,7 +45,7 @@
 				<h5><a href="#A Dream">A Dream</a></h5>
 				<h5><a href="#On Another's Sorrow:">On Another's Sorrow:</a></h5>
 			</div>
-			<div class="column" style="left: 15vw;">
+			<div class="column">
 				<h4><a href="#Experience">Experience</a></h4>
 				<h5><a href="#Introduction 2">Introduction</a></h5>
 				<h5><a href="#Earth's Answer">Earth's Answer</a></h5>
@@ -86,20 +86,32 @@
 		<div class="row">
 			<div class="column illustration">
 				<p><a href="Images/1.jpg"><img src="Images/1.jpg" alt="" /><br />
-						Plate 1</a>
+						Combined Title-page</a>
 				</p>
 			</div>
+			<div class="column raymo">
+				<p>SONGS OF INNOCENCE</p>
+				<p>and OF EXPERIENCE</p>
+				<p><i>Shewing the Two Contrary States<br />of the Human Soul</i></p>
+			</div>
+		</div>
+		<div class="row">
 			<div class="column illustration">
 				<p><a href="Images/2.jpg"><img src="Images/2.jpg" alt="" /><br />
-						Plate 2</a>
+						Frontispiece to <i>Songs of Innocence</i></a>
 				</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="column illustration">
 				<p><a href="Images/3.jpg"><img src="Images/3.jpg" alt="" /><br />
-						Plate 3</a>
+						Title-page</a>
 				</p>
+			</div>
+			<div class="column raymo">
+				<p>SONGS of Innocence</p>
+				<p>1789</p>
+				<p><i>The Author & Printer W Blake</i></p>
 			</div>
 		</div>
 		<div id="Introduction" class="row">
@@ -137,7 +149,7 @@
 				<div class="stanza">
 					<p>And I made a rural pen,</p>
 					<p>And I stain'd the water clear,</p>
-					<p>And I wrote my happy songs</p>
+					<p>And I wrote my happy songs,</p>
 					<p>Every child may joy to hear</p>
 				</div>
 			</div>
@@ -173,22 +185,23 @@
 			<div class="column">
 				<h3>Ecchoing Green</h3>
 				<div class="stanza">
-					<p>The Sun does arise</p>
-					<p>And make happy the skies</p>
-					<p>The merry bells rin</p>
-					<p>To welcome the Spring</p>
-					<p>The sky-lark and thrush</p>
-					<p>The birds of the bush</p>
-					<p>Sing louder aroun</p>
-					<p>To the bells' chearful sound</p>
-					<p>While our sports shall be see</p>
+					<p>The Sun does arise,</p>
+					<p>And make happy the skies.</p>
+					<p>The merry bells ring,</p>
+					<p>To welcome the Spring.</p>
+					<p>The sky-lark and thrush,</p>
+					<p>The birds of the bush,</p>
+					<p>Sing louder around,</p>
+					<p>To the bells chearful sound,</p>
+					<p>While our sports shall be seen</p>
 					<p>On the Ecchoing Green.</p>
 				</div>
 				<div class="stanza">
 					<p>Old John, with white hair</p>
-					<p>Does laugh away care</p>
-					<p>Sitting under the oak</p>
+					<p>Does laugh away care,</p>
+					<p>Sitting under the oak,</p>
 					<p>Among the old folk.</p>
+					<p style="text-align: right !important;"><i>They</i></p>
 				</div>
 			</div>
 		</div>
