--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</h2>
 	</div>
 	<div class="titleverso">
-		<p>This web edition was originally published by <a href="http://ebooks.adelaide.edu.au/">eBooks@Adelaide</a>, and modified and compiled by Raymo111 with better images.</p>
+		<p>This web edition was originally published by <a href="http://ebooks.adelaide.edu.au/">eBooks@Adelaide</a>, and modified and compiled by Raymo111 with better images from http://blakearchive.org.</p>
 		<p>Last updated October 1<sup>st</sup>, 2019.</p>
 	</div>
 	<hr />
