--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		</h2>
 	</div>
 	<div class="titleverso">
-		<p>This web edition was originally published by <a href="http://ebooks.adelaide.edu.au/">eBooks@Adelaide</a>, and modified and compiled by Raymo111 with better images from http://blakearchive.org.</p>
-		<p>Last updated October 1<sup>st</sup>, 2019.</p>
+		<p>This web edition was originally published by <a href="http://ebooks.adelaide.edu.au/" target="_blank">eBooks@Adelaide</a>, and modified and compiled by <a href="https://raymond.li/" target="_blank">Raymo111</a> with better images from <a href="http://blakearchive.org/" target="_blank">http://blakearchive.org</a>.</p>
+		<p>Last updated October 11<sup>th</sup>, 2020.</p>
 	</div>
 	<hr />
 	<div id="toc" class="contents">
@@ -1909,11 +1909,11 @@
 	</div>
 	<div class="colophon">
 		<p>This web edition was originally published by:</p>
-		<p>eBooks@Adelaid</p>
+		<p><a href="http://ebooks.adelaide.edu.au/" target="_blank">eBooks@Adelaide</a></p>
 		The University of Adelaide Librar</p>
 		University of Adelaid</p>
 		South Australia 5005</p>
-		<p>Compiled, formatted and better pictures found by Raymo111</p>
+		<p>Compiled, formatted and better pictures found by <a href="https://raymond.li/" target="_blank">Raymo111</a></p>
 	</div>
 
 </body>
